--- a/TGC/localisation/00_tooltips.csv
+++ b/TGC/localisation/00_tooltips.csv
@@ -1,72 +1,72 @@
 CODE;ENGLISH;FRENCH;GERMAN;POLISH;SPANISH;ITALIAN;SWEDISH;CZECH;HUNGARIAN;DUTCH;PORTUGUESE;RUSSIAN;FINNISH;x
-election_tool_tip;Election Events will run normally.Â§b;;;;;;;;;;;;x
-election_tool_tip_muted;Election Events will be Â§GmutedÂ§!, but their results will be Â§YrandomÂ§!.Â§b;;;;;;;;;;;;x
-override_tool_tip;Activate:Â§G National Campaign.Â§! \n\nÂ§RWARNING:Â§! National Campaigns will take a significant amount of money daily! Be careful otherwise you WILL bankrupt!Â§b;;;;;;;;;;;;x
-dom_pedro_age_10;Pedro is currently 10, it would be a terrible idea to crown him.Â§b;;;;;;;;;;;;x
-dom_pedro_age_11;Pedro is currently 11, it is too early to crown him.Â§b.Â§b;;;;;;;;;;;;x
-dom_pedro_age_12;Pedro is currently 12, it may be too early to crown him.Â§b.Â§b;;;;;;;;;;;;x
-dom_pedro_age_13;Pedro is currently 13, still early to crown him, but it may be reasonable.Â§b.Â§b;;;;;;;;;;;;x
-dom_pedro_age_14;Pedro is currently 14, changing his age of majority and crowning would be an wise move, he's old enough.Â§b;;;;;;;;;;;;x
-dom_pedro_age_15;Pedro is currently 15, changing his age of majority and crowning would be an wise move, he's old enough.Â§b.Â§b;;;;;;;;;;;;x
-dom_pedro_age_16;Pedro is currently 16, changing his age of majority and crowning would be an wise move, he's more than old enough.Â§b.Â§b;;;;;;;;;;;;x
-dom_pedro_age_17;Pedro is currently 17, changing his age of majority and crowning would be an wise move, he's more than old enough.Â§b.Â§b;;;;;;;;;;;;x
-dom_pedro_age_18;Pedro is currently 18. There's no need for a majority coup anymore, he will be crowned soon soon.Â§b;;;;;;;;;;;;x
-rio_grande_peace_deal_tooltip_0;Â§RWarning:Â§! The negotiations options will changed based on the war. They are Â§GwillingÂ§! to negotiate, but multiple failed negotiating attempts can make the situation worse.Â§b;;;;;;;;;;;;x
-rio_grande_peace_deal_tooltip_1;Â§RWarning:Â§! The negotiations options will changed based on the war. They are Â§YreluctantÂ§! to negotiate, we have negotiated once and failed, we should be careful the next time.Â§b;;;;;;;;;;;;x
-rio_grande_peace_deal_tooltip_2;Â§RWarning:Â§! The negotiations options will changed based on the war. They are Â§RskepticalÂ§! about negotiation, we have negotiated twice and failed, if we fail again I doubt they will want to try again.Â§b;;;;;;;;;;;;x
-rio_grande_peace_deal_tooltip_3;Â§RWarning:Â§! The negotiations options will changed based on the war, but they are now Â§RRefusingÂ§! to negotiate.Â§b;;;;;;;;;;;;x
-brz_politics_check_tooltip_0;Â§!The country is not politically prepared to abolish slavery at all, Political Consequences will be Â§Rbeyond dreadfulÂ§!.Â§b;;;;;;;;;;;;x
-brz_politics_check_tooltip_1;Â§!The country is not politically prepared to abolish slavery at all, Political Consequences will be Â§Rextremely dreadfulÂ§!.Â§bÂ§b;;;;;;;;;;;;x
-brz_politics_check_tooltip_2;Â§!The country is not politically prepared to abolish slavery on the slighest, Political Consequences will be Â§RdreadfulÂ§!.Â§b;;;;;;;;;;;;x
-brz_politics_check_tooltip_3;Â§!The country is not politically prepared to abolish slavery at all, Political Consequences will be Â§Rextremely direÂ§!.Â§b;;;;;;;;;;;;x
-brz_politics_check_tooltip_4;Â§!The country is not politically prepared to abolish slavery at all, Political Consequences will be Â§RdireÂ§!.Â§b;;;;;;;;;;;;x
-brz_politics_check_tooltip_5;Â§!The country is not politically prepared to abolish slavery, Political Consequences will be Â§RdireÂ§!.Â§b;;;;;;;;;;;;x
-brz_politics_check_tooltip_6;Â§!The country is politically poorly prepared to abolish slavery, Political Consequences will be Â§YbadÂ§!.Â§b;;;;;;;;;;;;x
-brz_politics_check_tooltip_7;Â§!The country is somewhat politically prepared to abolish slavery, Political Consequences will be Â§Ybad but tolerableÂ§!.Â§b;;;;;;;;;;;;x
-brz_politics_check_tooltip_8;Â§!The country is politically prepared to abolish slavery, Political Consequences will be Â§Gsomewhat tolerableÂ§!.Â§b;;;;;;;;;;;;x
-brz_politics_check_tooltip_9;Â§!The country is politically well prepared to abolish slavery, Political Consequences will be Â§GtolerableÂ§!.Â§b;;;;;;;;;;;;x
-brz_politics_check_tooltip_10;Â§!The country is fully politically prepared to abolish slavery, Political Consequences will be Â§GtolerableÂ§!.Â§b;;;;;;;;;;;;x
-brz_economics_check_tooltip_0;Â§! The country is fully dependant on slave work, Economical Consequences will be Â§Rbeyond dreadfulÂ§!.Â§b;;;;;;;;;;;;x
-brz_economics_check_tooltip_1;Â§! The country is fully dependant on slave work, Economical Consequences will be Â§Rextremely dreadfulÂ§!.Â§b;;;;;;;;;;;;x
-brz_economics_check_tooltip_2;Â§! The country is heavily dependant on slave work, Economical Consequences be Â§RdreadfulÂ§!.Â§b;;;;;;;;;;;;x
-brz_economics_check_tooltip_3;Â§! The country is dependant on slave work, Economical Consequences be Â§Rextremely direÂ§!.Â§b;;;;;;;;;;;;x
-brz_economics_check_tooltip_4;Â§! The country is still dependant on slave work, Economical Consequences will be Â§RdireÂ§!.Â§b;;;;;;;;;;;;x
-brz_economics_check_tooltip_5;Â§! The country still rellies on slave work, Economical Consequences Â§Rsomewhat direÂ§!.Â§b;;;;;;;;;;;;x
-brz_economics_check_tooltip_6;Â§! The country still somewhat rellies on slave work, Economical Consequences will be Â§YbadÂ§!.Â§b;;;;;;;;;;;;x
-brz_economics_check_tooltip_7;Â§! Some sectors are still dependent on slave work, Economical Consequences be Â§Ysomewhat tolerableÂ§!.Â§b;;;;;;;;;;;;x
-brz_economics_check_tooltip_8;Â§! Most, but not all, sectors are free from slave work, Economical Consequences will be Â§GtolerableÂ§!.Â§b;;;;;;;;;;;;x
-brz_economics_check_tooltip_9;Â§! The economy does not relly on slave work, Economical Consequences will be Â§GreasonableÂ§!.Â§b;;;;;;;;;;;;x
-brz_economics_check_tooltip_10;Â§! The economy pretty much free from slave work, Economical Consequences will be Â§BfewÂ§!.Â§bb;;;;;;;;;;;;x
-election_tool_tip;Election Events will run normally.Â§b;;;;;;;;;;;;x
-election_tool_tip_muted;Election Events will be Â§GmutedÂ§!, but their results will be Â§YrandomÂ§!.Â§b;;;;;;;;;;;;x
-override_tool_tip;Activate:Â§G National Campaign.Â§! \n\nÂ§RWARNING:Â§! National Campaigns will take a significant amount of money daily! Be careful otherwise you WILL bankrupt!Â§b;;;;;;;;;;;;x
-claim_tooltip;Get a Â§YClaimÂ§! on: \n    Misiones \n    Easterm Misiones\n    Corrientes\n    Entre Rios\n    Palma SuelaÂ§b;;;;;;;;;;;;x
+election_tool_tip;Election Events will run normally.§b;;;;;;;;;;;;x
+election_tool_tip_muted;Election Events will be §Gmuted§!, but their results will be §Yrandom§!.§b;;;;;;;;;;;;x
+override_tool_tip;Activate:§G National Campaign.§! \n\n§RWARNING:§! National Campaigns will take a significant amount of money daily! Be careful otherwise you WILL bankrupt!§b;;;;;;;;;;;;x
+dom_pedro_age_10;Pedro is currently 10, it would be a terrible idea to crown him.§b;;;;;;;;;;;;x
+dom_pedro_age_11;Pedro is currently 11, it is too early to crown him.§b.§b;;;;;;;;;;;;x
+dom_pedro_age_12;Pedro is currently 12, it may be too early to crown him.§b.§b;;;;;;;;;;;;x
+dom_pedro_age_13;Pedro is currently 13, still early to crown him, but it may be reasonable.§b.§b;;;;;;;;;;;;x
+dom_pedro_age_14;Pedro is currently 14, changing his age of majority and crowning would be an wise move, he's old enough.§b;;;;;;;;;;;;x
+dom_pedro_age_15;Pedro is currently 15, changing his age of majority and crowning would be an wise move, he's old enough.§b.§b;;;;;;;;;;;;x
+dom_pedro_age_16;Pedro is currently 16, changing his age of majority and crowning would be an wise move, he's more than old enough.§b.§b;;;;;;;;;;;;x
+dom_pedro_age_17;Pedro is currently 17, changing his age of majority and crowning would be an wise move, he's more than old enough.§b.§b;;;;;;;;;;;;x
+dom_pedro_age_18;Pedro is currently 18. There's no need for a majority coup anymore, he will be crowned soon soon.§b;;;;;;;;;;;;x
+rio_grande_peace_deal_tooltip_0;§RWarning:§! The negotiations options will changed based on the war. They are §Gwilling§! to negotiate, but multiple failed negotiating attempts can make the situation worse.§b;;;;;;;;;;;;x
+rio_grande_peace_deal_tooltip_1;§RWarning:§! The negotiations options will changed based on the war. They are §Yreluctant§! to negotiate, we have negotiated once and failed, we should be careful the next time.§b;;;;;;;;;;;;x
+rio_grande_peace_deal_tooltip_2;§RWarning:§! The negotiations options will changed based on the war. They are §Rskeptical§! about negotiation, we have negotiated twice and failed, if we fail again I doubt they will want to try again.§b;;;;;;;;;;;;x
+rio_grande_peace_deal_tooltip_3;§RWarning:§! The negotiations options will changed based on the war, but they are now §RRefusing§! to negotiate.§b;;;;;;;;;;;;x
+brz_politics_check_tooltip_0;§!The country is not politically prepared to abolish slavery at all, Political Consequences will be §Rbeyond dreadful§!.§b;;;;;;;;;;;;x
+brz_politics_check_tooltip_1;§!The country is not politically prepared to abolish slavery at all, Political Consequences will be §Rextremely dreadful§!.§b§b;;;;;;;;;;;;x
+brz_politics_check_tooltip_2;§!The country is not politically prepared to abolish slavery on the slighest, Political Consequences will be §Rdreadful§!.§b;;;;;;;;;;;;x
+brz_politics_check_tooltip_3;§!The country is not politically prepared to abolish slavery at all, Political Consequences will be §Rextremely dire§!.§b;;;;;;;;;;;;x
+brz_politics_check_tooltip_4;§!The country is not politically prepared to abolish slavery at all, Political Consequences will be §Rdire§!.§b;;;;;;;;;;;;x
+brz_politics_check_tooltip_5;§!The country is not politically prepared to abolish slavery, Political Consequences will be §Rdire§!.§b;;;;;;;;;;;;x
+brz_politics_check_tooltip_6;§!The country is politically poorly prepared to abolish slavery, Political Consequences will be §Ybad§!.§b;;;;;;;;;;;;x
+brz_politics_check_tooltip_7;§!The country is somewhat politically prepared to abolish slavery, Political Consequences will be §Ybad but tolerable§!.§b;;;;;;;;;;;;x
+brz_politics_check_tooltip_8;§!The country is politically prepared to abolish slavery, Political Consequences will be §Gsomewhat tolerable§!.§b;;;;;;;;;;;;x
+brz_politics_check_tooltip_9;§!The country is politically well prepared to abolish slavery, Political Consequences will be §Gtolerable§!.§b;;;;;;;;;;;;x
+brz_politics_check_tooltip_10;§!The country is fully politically prepared to abolish slavery, Political Consequences will be §Gtolerable§!.§b;;;;;;;;;;;;x
+brz_economics_check_tooltip_0;§! The country is fully dependant on slave work, Economical Consequences will be §Rbeyond dreadful§!.§b;;;;;;;;;;;;x
+brz_economics_check_tooltip_1;§! The country is fully dependant on slave work, Economical Consequences will be §Rextremely dreadful§!.§b;;;;;;;;;;;;x
+brz_economics_check_tooltip_2;§! The country is heavily dependant on slave work, Economical Consequences be §Rdreadful§!.§b;;;;;;;;;;;;x
+brz_economics_check_tooltip_3;§! The country is dependant on slave work, Economical Consequences be §Rextremely dire§!.§b;;;;;;;;;;;;x
+brz_economics_check_tooltip_4;§! The country is still dependant on slave work, Economical Consequences will be §Rdire§!.§b;;;;;;;;;;;;x
+brz_economics_check_tooltip_5;§! The country still rellies on slave work, Economical Consequences §Rsomewhat dire§!.§b;;;;;;;;;;;;x
+brz_economics_check_tooltip_6;§! The country still somewhat rellies on slave work, Economical Consequences will be §Ybad§!.§b;;;;;;;;;;;;x
+brz_economics_check_tooltip_7;§! Some sectors are still dependent on slave work, Economical Consequences be §Ysomewhat tolerable§!.§b;;;;;;;;;;;;x
+brz_economics_check_tooltip_8;§! Most, but not all, sectors are free from slave work, Economical Consequences will be §Gtolerable§!.§b;;;;;;;;;;;;x
+brz_economics_check_tooltip_9;§! The economy does not relly on slave work, Economical Consequences will be §Greasonable§!.§b;;;;;;;;;;;;x
+brz_economics_check_tooltip_10;§! The economy pretty much free from slave work, Economical Consequences will be §Bfew§!.§bb;;;;;;;;;;;;x
+election_tool_tip;Election Events will run normally.§b;;;;;;;;;;;;x
+election_tool_tip_muted;Election Events will be §Gmuted§!, but their results will be §Yrandom§!.§b;;;;;;;;;;;;x
+override_tool_tip;Activate:§G National Campaign.§! \n\n§RWARNING:§! National Campaigns will take a significant amount of money daily! Be careful otherwise you WILL bankrupt!§b;;;;;;;;;;;;x
+claim_tooltip;Get a §YClaim§! on: \n    Misiones \n    Easterm Misiones\n    Corrientes\n    Entre Rios\n    Palma Suela§b;;;;;;;;;;;;x
 acquire_all_claims;Acquire all claimed land;;;;;;;;;;;;x
-break_line_tool_tip;Â§!\n;;;;;;;;;;;;x
-break_line_tool_tip_multiple;Â§!\n\n\n\n\n\n;;;;;;;;;;;;x
-ban_slave_trade;Â§GBansÂ§! Slave Trade.Â§b;;;;;;;;;;;;x
-end_game;Â§YEnd GameÂ§! and Â§YSee ScoreÂ§!.Â§b;;;;;;;;;;;;x
-continue_to_play;Â§GContinueÂ§! to play.Â§b;;;;;;;;;;;;x
-violate_neutrality;Â§RViolatesÂ§! the target's Â§GNeutralityÂ§!. This will be meet with severe consequences by the International Community.Â§b;;;;;;;;;;;;x
-brz_politics_improve;Â§!This will Â§GimproveÂ§! the Political Landscape for Abolition.Â§b;;;;;;;;;;;;x
-brz_politics_worsen;Â§!This will Â§RworsenÂ§! the Political Landscape for Abolition.Â§b;;;;;;;;;;;;x
-brz_economics_improve;Â§!This will Â§GimproveÂ§! the Economical Landscape for Abolition.Â§b;;;;;;;;;;;;x
-brz_economics_worsen;Â§!This will Â§RworsenÂ§! the Economical Landscape for Abolition.Â§b;;;;;;;;;;;;x
-brz_industry_alves;Â§bProblem is: Our industry is a bit over reliant on the protective tariff, this could issue chaos into the local industry who, all of a sudden, will be competing against English goods.;;;;;;;;;;;;;x
-brz_no_industry_alves;Â§bOur industry barely developed during the time, so I don't think that will be much of a problem.;;;;;;;;;;;;;x
-brz_alves_end;Â§!The Â§YAlves Branco TariffÂ§! modifier is set to end in Â§Y5 yearsÂ§!.Â§b;;;;;;;;;;;;x
-slavery_end_economic_tooltip;Provinces will be hit with an RGO debuff, from -10% to -25%, based on their slave population.Â§b;;;;;;;;;;;;x
-become_sul;Become Â§BRio-Grandense RepublicÂ§b;;;;;;;;;;;;x
-brz_guyanas_buy;You will pay Â§Y50000Â§! pounds per province, up to Â§Y450000Â§! pounds for all of them.Â§b;;;;;;;;;;;;x
-kpb_formation;Forming the United Kingdom will lock you out from Brazilian and Portuguese exclusive content.Â§b;;;;;;;;;;;;x
-french_schooling_tool_tip;The Â§GJules Ferry LawsÂ§! and the Â§GFrench Language SchoolingÂ§! decisions are mutually exclusive.Â§b;;;;;;;;;;;;x
-brazil_colony;Turns Brazil back into a Â§YColonyÂ§!.\n;;;;;;;;;;;;x
-currently_enabled;Â§!This is currently Â§GEnabledÂ§!. Click to Â§RDisableÂ§! it.Â§b;;;;;;;;;;;;x
-currently_disabled;Â§!This is currently Â§RDisabledÂ§!. Click to Â§GEnableÂ§! it.Â§b;;;;;;;;;;;;x
-permanent_option;Â§!This is permanent, you Â§RWON'TÂ§! be able to change this option back on again in this save.Â§b;;;;;;;;;;;;x
-permanent_option_taken;Â§! You can't change this option anymore.Â§b;;;;;;;;;;;;x
-permanent_action;Â§!Beware! This is Â§RPERMANENTÂ§!!Â§b;;;;;;;;;;;;x
-not_mp;Â§!\nThis is Â§RNOTÂ§! a multiplayer game, there's nobody to give you grants!Â§b;;;;;;;;;;;;x
-cant_do_while_at_war_or_no_vassals;Â§!You can't do this while at Â§RwarÂ§! or if you Â§Rhave no vassalsÂ§!.Â§b;;;;;;;;;;;;x
-cant_do_that_yet;Â§!You Â§RCAN NOTÂ§! do again that yet!Â§b;;;;;;;;;;;;x
-locked_option;Â§!This option is Â§RLocked.Â§! for safety, unlock it before using.Â§b;;;;;;;;;;;;x
+break_line_tool_tip;§!\n;;;;;;;;;;;;x
+break_line_tool_tip_multiple;§!\n\n\n\n\n\n;;;;;;;;;;;;x
+ban_slave_trade;§GBans§! Slave Trade.§b;;;;;;;;;;;;x
+end_game;§YEnd Game§! and §YSee Score§!.§b;;;;;;;;;;;;x
+continue_to_play;§GContinue§! to play.§b;;;;;;;;;;;;x
+violate_neutrality;§RViolates§! the target's §GNeutrality§!. This will be meet with severe consequences by the International Community.§b;;;;;;;;;;;;x
+brz_politics_improve;§!This will §Gimprove§! the Political Landscape for Abolition.§b;;;;;;;;;;;;x
+brz_politics_worsen;§!This will §Rworsen§! the Political Landscape for Abolition.§b;;;;;;;;;;;;x
+brz_economics_improve;§!This will §Gimprove§! the Economical Landscape for Abolition.§b;;;;;;;;;;;;x
+brz_economics_worsen;§!This will §Rworsen§! the Economical Landscape for Abolition.§b;;;;;;;;;;;;x
+brz_industry_alves;§bProblem is: Our industry is a bit over reliant on the protective tariff, this could issue chaos into the local industry who, all of a sudden, will be competing against English goods.;;;;;;;;;;;;;x
+brz_no_industry_alves;§bOur industry barely developed during the time, so I don't think that will be much of a problem.;;;;;;;;;;;;;x
+brz_alves_end;§!The §YAlves Branco Tariff§! modifier is set to end in §Y5 years§!.§b;;;;;;;;;;;;x
+slavery_end_economic_tooltip;Provinces will be hit with an RGO debuff, from -10% to -25%, based on their slave population.§b;;;;;;;;;;;;x
+become_sul;Become §BRio-Grandense Republic§b;;;;;;;;;;;;x
+brz_guyanas_buy;You will pay §Y50000§! pounds per province, up to §Y450000§! pounds for all of them.§b;;;;;;;;;;;;x
+kpb_formation;Forming the United Kingdom will lock you out from Brazilian and Portuguese exclusive content.§b;;;;;;;;;;;;x
+french_schooling_tool_tip;The §GJules Ferry Laws§! and the §GFrench Language Schooling§! decisions are mutually exclusive.§b;;;;;;;;;;;;x
+brazil_colony;Turns Brazil back into a §YColony§!.\n;;;;;;;;;;;;x
+currently_enabled;§!This is currently §GEnabled§!. Click to §RDisable§! it.§b;;;;;;;;;;;;x
+currently_disabled;§!This is currently §RDisabled§!. Click to §GEnable§! it.§b;;;;;;;;;;;;x
+permanent_option;§!This is permanent, you §RWON'T§! be able to change this option back on again in this save.§b;;;;;;;;;;;;x
+permanent_option_taken;§! You can't change this option anymore.§b;;;;;;;;;;;;x
+permanent_action;§!Beware! This is §RPERMANENT§!!§b;;;;;;;;;;;;x
+not_mp;§!\nThis is §RNOT§! a multiplayer game, there's nobody to give you grants!§b;;;;;;;;;;;;x
+cant_do_while_at_war_or_no_vassals;§!You can't do this while at §Rwar§! or if you §Rhave no vassals§!.§b;;;;;;;;;;;;x
+cant_do_that_yet;§!You §RCAN NOT§! do again that yet!§b;;;;;;;;;;;;x
+locked_option;§!This option is §RLocked.§! for safety, unlock it before using.§b;;;;;;;;;;;;x
