redid red-white struggle modifiers

--- a/TGC/localisation/00_modifiers.csv
+++ b/TGC/localisation/00_modifiers.csv
@@ -1627,3 +1627,35 @@ wild_puppeter;Tigthing the Leash;;;;;;;;;;;;;;
 wild_puppeter_desc;Some of our vassals are getting a bit too out of control, but we are bullying them back into their place!;;;;;;;;;;;;;;
 tourism_campaign;Tourism and Settlement Campaign;;;;;;;;;;;;;;
 tourism_campaign_desc;;;;;;;;;;;;;;;
+poland_redwhite_aa;Red-White Struggle;;;;;;;;;;;;x
+poland_redwhite_aa_desc;§WWhite Influence: §gNegligible\n\n§RRed Influence: §gNegligible;;;;;;;;;;;;x
+poland_redwhite_ab;Red-White Struggle;;;;;;;;;;;;x
+poland_redwhite_ab_desc;§WWhite Influence: §gNegligible\n\n§RRed Influence: §gLow;;;;;;;;;;;;x
+poland_redwhite_ac;Red-White Struggle;;;;;;;;;;;;x
+poland_redwhite_ac_desc;§WWhite Influence: §gNegligible\n\n§RRed Influence: §gModerate;;;;;;;;;;;;x
+poland_redwhite_ad;Red-White Struggle;;;;;;;;;;;;x
+poland_redwhite_ad_desc;§WWhite Influence: §gNegligible\n\n§RRed Influence: §gHigh;;;;;;;;;;;;x
+poland_redwhite_ba;Red-White Struggle;;;;;;;;;;;;x
+poland_redwhite_ba_desc;§WWhite Influence: §gLow\n\n§RRed Influence: §gNegligible;;;;;;;;;;;;x
+poland_redwhite_bb;Red-White Struggle;;;;;;;;;;;;x
+poland_redwhite_bb_desc;§WWhite Influence: §gLow\n\n§RRed Influence: §gLow;;;;;;;;;;;;x
+poland_redwhite_bc;Red-White Struggle;;;;;;;;;;;;x
+poland_redwhite_bc_desc;§WWhite Influence: §gLow\n\n§RRed Influence: §gModerate;;;;;;;;;;;;x
+poland_redwhite_bd;Red-White Struggle;;;;;;;;;;;;x
+poland_redwhite_bd_desc;§WWhite Influence: §gLow\n\n§RRed Influence: §gHigh;;;;;;;;;;;;x
+poland_redwhite_ca;Red-White Struggle;;;;;;;;;;;;x
+poland_redwhite_ca_desc;§WWhite Influence: §gModerate\n\n§RRed Influence: §gNegligible;;;;;;;;;;;;x
+poland_redwhite_cb;Red-White Struggle;;;;;;;;;;;;x
+poland_redwhite_cb_desc;§WWhite Influence: §gModerate\n\n§RRed Influence: §gLow;;;;;;;;;;;;x
+poland_redwhite_cc;Red-White Struggle;;;;;;;;;;;;x
+poland_redwhite_cc_desc;§WWhite Influence: §gModerate\n\n§RRed Influence: §gModerate;;;;;;;;;;;;x
+poland_redwhite_cd;Red-White Struggle;;;;;;;;;;;;x
+poland_redwhite_cd_desc;§WWhite Influence: §gModerate\n\n§RRed Influence: §gHigh;;;;;;;;;;;;x
+poland_redwhite_da;Red-White Struggle;;;;;;;;;;;;x
+poland_redwhite_da_desc;§WWhite Influence: §gHigh\n\n§RRed Influence: §gNegligible;;;;;;;;;;;;x
+poland_redwhite_db;Red-White Struggle;;;;;;;;;;;;x
+poland_redwhite_db_desc;§WWhite Influence: §gHigh\n\n§RRed Influence: §gLow;;;;;;;;;;;;x
+poland_redwhite_dc;Red-White Struggle;;;;;;;;;;;;x
+poland_redwhite_dc_desc;§WWhite Influence: §gHigh\n\n§RRed Influence: §gModerate;;;;;;;;;;;;x
+poland_redwhite_dd;Red-White Struggle;;;;;;;;;;;;x
+poland_redwhite_dd_desc;§WWhite Influence: §gHigh\n\n§RRed Influence: §gHigh;;;;;;;;;;;;x
