--- a/TGCFantasyFormables/localisation/00000000_countries.csv
+++ b/TGCFantasyFormables/localisation/00000000_countries.csv
@@ -3,7 +3,7 @@ BYZ_absolute_monarchy;Byzantine Empire;Empire byzantin;Byzantinisches Reich;;;;;
 BYZ_absolute_monarchy2;Roman Empire;Empire byzantin;Byzantinisches Reich;;;;;;;;;;;x
 BYZ_bourgeois_dictatorship;Roman Federation;;;;;;;;;;;;;x
 BYZ_democracy;Byzantine Republic;;;;;;;;;;;;;x
-BYZ_democracy;Rome;;;;;;;;;;;;;x
+BYZ_democracy2;Rome;;;;;;;;;;;;;x
 BYZ_fascist_dictatorship;Roman Empire;;;;;;;;;;;;;x
 BYZ_hms_government;Byzantine Empire;;;;;;;;;;;;;x
 BYZ_hms_government2;Roman Empire;;;;;;;;;;;;;x
@@ -11,3 +11,7 @@ BYZ_presidential_dictatorship;Great Rome;;;;;;;;;;;;;x
 BYZ_proletarian_dictatorship;Union of Red Themes;Union des thèmes rouges;Union der Rotthematiker;;;;;;;;;;;x
 BYZ_prussian_constitutionalism;Byzantine Empire;;;;;;;;;;;;;x
 BYZ_prussian_constitutionalism2;Roman Empire;;;;;;;;;;;;;x
+BYZ_hms_government2_ADJ;Roman;;;;;;;;;;;;;x
+BYZ_prussian_constitutionalism2_ADJ;Roman;;;;;;;;;;;;;x
+BYZ_absolute_monarchy2_ADJ;Roman;;;;;;;;;;;;;x
+BYZ_democracy2_ADJ;Roman;;;;;;;;;;;;;x
