--- a/TGC/localisation/00_countries-names-gov't.csv
+++ b/TGC/localisation/00_countries-names-gov't.csv
@@ -1783,7 +1783,7 @@ PBC_hms_government;Peru-Bolivia;;;;;;;;;;;;;x
 PBC_presidential_dictatorship;Peru-Bolivia;;;;;;;;;;;;;x
 PBC_proletarian_dictatorship;People’s Andine Republic;;;;;;;;;;;;;x
 PBC_prussian_constitutionalism;Great Peru;;;;;;;;;;;;;x
-PBC_colonial_company;Virreinato del Peru;;;;;;;;;;;;;x
+PBC_colonial_company;Viceroyalty of Peru;;;;;;;;;;;;;x
 PEI_colonial_company;Prince Edward Island Colony;;;;;;;;;;;;;x
 PEI_dominion;Dominion of Prince Edward Island;;;;;;;;;;;;;x
 PEI_hms_governmenr;Prince Edward Island;;;;;;;;;;;;;x
