--- a/TGC/localisation/00_countries-names.csv
+++ b/TGC/localisation/00_countries-names.csv
@@ -226,7 +226,7 @@ DAI;Dai Nam;Dai Nam;Dai Nam;;;;;;;;;;;x
 DAK;Sioux Nation;;;;;;;;;;;;;x
 DAM;Damagaram;;;;;;;;;;;;;x
 DAR;Darfur;;;;;;;;;;;;;x
-DEN;Denmark;Danemark;Dï¿½nemark;;;;;;;;;;;x
+DEN;Denmark;Danemark;Dänemark;;;;;;;;;;;x
 DES;Deseret;Deseret;Dischret;;;;;;;;;;;x
 DGT;Diaguita;;;;;;;;;;;;;x
 DJA;Jambi;;;;;;;;;;;;;x
@@ -242,10 +242,10 @@ DUB;Dubai;;;;;;;;;;;x
 DUR;Pashtunistan;;;;;;;;;;;;;x
 DZG;Danzig;Dantzig;Danzig;;;;;;;;;;;x
 ECU;Ecuador;ï¿½quateur;Ekuador;;;;;;;;;;;x
-EGY;Egypt;ï¿½gypte;ï¿½gypten;;;;;;;;;;;x
+EGY;Egypt;ï¿½gypte;Ägypten;;;;;;;;;;;x
 EIC;East India Company;;;;;;;;;;;;;x
 ELS;El Salvador;Salvador;El Salvador;;;;;;;;;;;x
-ENG;United Kingdom;Angleterre;Groï¿½britannien;;;;;;;;;;;x
+ENG;United Kingdom;Angleterre;Großbritannien;;;;;;;;;;;x
 ENL;England;;;;;;;;;;;;;x
 ENT;Entre Rios;;;;;;;;;;;;;x
 EQG;Equatorial Guinea;;;;;;;;;;;;;x
@@ -397,7 +397,7 @@ KSN;Dhir;;;;;;;;;;;;;x
 KTH;Kathiri;;;;;;;;;;;;;x
 KTI;Kutai;;;;;;;;;;;;;x
 KUB;Kuba;Kuba;Kuba;;;;;;;;;;;x
-KUK;Austria-Hungary;Autriche-Hongrie;ï¿½sterreich-Ungarn;;;;;;;;;;;x
+KUK;Austria-Hungary;Autriche-Hongrie;Österreich-Ungarn;;;;;;;;;;;x
 KUN;Kunduz;;;;;;;;;;;;;x
 KUT;Kutch;Kutch;Kutch;;;;;;;;;;;x
 KWT;Kuwait;;;;;;;;;;;;;x
@@ -433,7 +433,7 @@ LPL;United Provinces;;;;;;;;;;;;;x
 LRJ;La Rioja;;;;;;;;;;;x
 LSK;Alaska;;;;;;;;;;;;;x
 LUA;Luang Prabang;Luang Prabang;Luang Prabang;;;;;;;;;;;x
-LUB;Lübeck;Lï¿½beck;Lï¿½beck;;;;;;;;;;;x
+LUB;Lübeck;Lï¿½beck;Lübeck;;;;;;;;;;;x
 LUC;Lucca;Lucques;Lucca;;;;;;;;;;;x
 LUN;Lunda;Lunda;Lunda;;;;;;;;;;;x
 LUW;Luwu;;;;;;;;;;;;;x
@@ -492,7 +492,7 @@ MSK;Misquito Coast;;;;;;;;;;;;;x
 MSN;Misiones;;;;;;;;;;;;;x
 MSS;Samos;;;;;;;;;;;;;x
 MST;Mecklenburg-Strelitz;;;;;;;;;;;;;x
-MTC;Métis Confederacy;Confï¿½dï¿½ration mï¿½tisse;Metis-Konfï¿½deration;;;;;;;;;;;x
+MTC;Métis Confederacy;Confï¿½dï¿½ration mï¿½tisse;Metis-Konföderation;;;;;;;;;;;x
 MTQ;Martinique;;;;;;;;;;;;;x
 MUD;Mudhol;;;;;;;;;;;;;x
 MUG;Mughalistan;Mogholistan;Mughalistan;;;;;;;;;;;x
@@ -563,7 +563,7 @@ PPG;Papua New Guinea;;;;;;;;;;;;;x
 PRG;Paraguay;Paraguay;Paraguay;;;;;;;;;;;x
 PRI;Puerto Rico;Puerto Rico;Puerto Rico;;;;;;;;;;;x
 PRK;Perak;;;;;;;;;;;;;x
-PRU;Prussia;Prusse;Preuï¿½en;;;;;;;;;;;x
+PRU;Prussia;Prusse;Preußen;;;;;;;;;;;x
 PTG;Patagonia;;;;;;;;;;;;;x
 PTK;Pontianak;;;;;;;;;;;;;x
 PTL;Patiala;;;;;;;;;;;;;x
@@ -594,13 +594,13 @@ MTG;Transatlantic Republic of Mato Grosso;;;;;;;;;;;;;x
 RHI;Rhineland;Rhénanie;Rheinland;;;;;;;;;;;x
 RHO;Southern Rhodesia;Rhodésie du sud;Südrhodesien;;;;;;;;;;;x
 RHI;Rhineland;Rhï¿½nanie;Rheinland;;;;;;;;;;;x
-RHO;Southern Rhodesia;Rhodï¿½sie du sud;Sï¿½drhodesien;;;;;;;;;;;x
+RHO;Southern Rhodesia;Rhodï¿½sie du sud;Südrhodesien;;;;;;;;;;;x
 RIA;Riau-Lingga;;;;;;;;;;;;;x
 RJK;Rajkot;;;;;;;;;;;;;x
 RLE;Reuss-Lobenstein-Ebersdorf;;;;;;;;;;;;;x
 RMG;Romagna;;;;;;;;;;;;;x
 RNC;Mountaineer's Republic;;;;;;;;;;;;;x
-ROM;Romania;Roumanie;Rumï¿½nien;;;;;;;;;;;x
+ROM;Romania;Roumanie;Rumänien;;;;;;;;;;;x
 RPL;Rupert's Land;Assiniboia;;;;;;;;;;;;x
 RPP;Rajpipla;;;;;;;;;;;;;x
 RSR;Reuss Elder Line;;;;;;;;;;;;;x
@@ -610,7 +610,7 @@ RUT;Ruthenia;Ruthï¿½nie;Ruthenien;;;;;;;;;;;x
 RWA;Rwanda;;;;;;;;;;;;;x
 RYU;Ryukyu;;;;;;;;;;;;;x
 SAA;Saarland;Sarre;Saarland;;;;;;;;;;;x
-SAF;South Africa;Afrique du Sud;Sï¿½dafrika;;;;;;;;;;;x
+SAF;South Africa;Afrique du Sud;Südafrika;;;;;;;;;;;x
 SAK;Siak;;;;;;;;;;;;;x
 SAM;Sisam Imëreti;;;;;;;;;;;;;x
 SAR;Sardinia-Piedmont;Piï¿½mont-Sardaigne;Sardinien-Piemont;;;;;;;;;;;x
@@ -628,7 +628,7 @@ SEG;Bamana Empire;;;;;;;;;;;;;x
 SEN;Tohoku;;;;;;;;;;;;;x
 SER;Serbia;Serbie;Serbien;;;;;;;;;;;x
 SEY;Seychelles;;;;;;;;;;;;;x
-SGF;South German Federation;ï¿½tats de l'Allemagne du Sud;Sï¿½ddeutscher Bund;;;;;;;;;;;x
+SGF;South German Federation;ï¿½tats de l'Allemagne du Sud;Süddeutscher Bund;;;;;;;;;;;x
 SGM;Hohenzollern-Sigmaringen;;;;;;;;;;;;;x
 SGP;Singapore;;;;;;;;;;;;;x
 SHA;Shan;;;;;;;;;;;;;x
@@ -642,7 +642,7 @@ SIA;Siam;Siam;Siam;;;;;;;;;;;x
 SIB;Siberian Republic;;;;;;;;;;;;;x
 SIC;Two Sicilies;Deux-Siciles;Bd Sizilien;;;;;;;;;;;x
 SID;Sidama;Sidama;Sidama;;;;;;;;;;;x
-SIE;Transylvania;Transylvanie;Siebenbï¿½rgen;;;;;;;;;;;x
+SIE;Transylvania;Transylvanie;Siebenbürgen;;;;;;;;;;;x
 SIK;Sikkim;Sikkim;Sikkim;;;;;;;;;;;x
 SIN;Sindh;Sindh;Sindh;;;;;;;;;;;x
 SIS;Sistan;;;;;;;;;;;;;x
@@ -743,7 +743,7 @@ TUN;Tunisia;;;;;;;;;;;;;x
 TUR;Turkey;Empire ottoman;Osmanisches Reich;;;;;;;;;;;x
 TUS;Tuscany;Toscane;Toskana;;;;;;;;;;;x
 UBD;United Baltic Provinces;Provinces baltiques unies;Vereinite Baltische Staaten;;;;;;;;;;;x
-UCA;Federal Republic of Central America;Confï¿½dï¿½ration d'Amï¿½rique centrale;Zentralamerikanische Konfï¿½deration;;;;;;;;;;;x
+UCA;Federal Republic of Central America;Confï¿½dï¿½ration d'Amï¿½rique centrale;Zentralamerikanische Konföderation;;;;;;;;;;;x
 UCV;Temp. Uncivilized Nation;;;;;;;;;;;;;x
 UIL;New American Alliance;;;;;;;;;;;;;x
 UKR;Ukraine;Ukraine;Ukraine;;;;;;;;;;;x
@@ -795,7 +795,7 @@ WOL;Wolof;Djolof;Jolof;;;;;;;;;;;x
 WRI;Warri;Warri;Warri;;;;;;;;;;;x
 WRL;Warsangali;;;;;;;;;;;;;x
 WSF;Zapadoslavia;;;;;;;;;;;;;x
-WUR;Württemberg;Wurtemberg;Wï¿½rttemberg;;;;;;;;;;;x
+WUR;Württemberg;Wurtemberg;Württemberg;;;;;;;;;;;x
 XBI;Xibei San Ma;Xibei San Ma;Xibei San Ma;;;;;;;;;;;x
 XHO;Xhosa;Xhosa;Xhosa;;;;;;;;;;;x
 XIN;Xinjiang;Clique de Xinjiang;Xinjiang-Clique;;;;;;;;;;;x
