copy and pasted (probably the correct) french loc

--- a/TGC/localisation/00_war-cb.csv
+++ b/TGC/localisation/00_war-cb.csv
@@ -278,7 +278,7 @@ gendarme_of_europe_desc;Drive out the revolutionaries from $RECIPIENT$, restore 
 gendarme_of_europe_setup;Drive out the revolutionaries from $RECIPIENT$!;Prendre $STATE$ ?$RECIPIENT$ pour le rendre ?$THIRD$;Geben Sie $STATE$ an $THIRD$ von $RECIPIENT$ zurück;;;;;;;;;;;x
 gendarme_of_europe_short;$RECIPIENT$ installs Absolute Monarchy;$THIRD$ prend $STATE$;$THIRD$ erwirbt $STATE$;;;;;;;;;;;x
 monroe2;Expel the Imperialist;Peuple libre;Freies Volk;;;;;;;;;;;;x;;;;;;;;;;;;;;
-monroe2_desc;Drive out the Invaders from the Americas;Libå»¨er un å³paysåŠ¬ de ses oppresseurs;Befreien Sie ein §YLand§W von seinen Unterdrückern.;;;;;;;;;;;x
+monroe2_desc;Drive out the Invaders from the Americas;Libérer un §Ypays§W de ses oppresseurs;Befreien Sie ein §YLand§W von seinen Unterdrückern.;;;;;;;;;;;x
 monroe2_short;Seize the colonial holdings in the New World;$THIRD$ prend $STATE$;$THIRD$ erwirbt $STATE$;;;;;;;;;;;;x;;;;;;;;;;;;;;
 monroe2_setup;Seize the colonial holdings in the New World;Prendre $STATE$ ?$RECIPIENT$ pour le rendre ?$THIRD$;Geben Sie $STATE$ an $THIRD$ von $RECIPIENT$ zurück;;;;;;;;;;;;x;;;;;;;;;;;;;;
 negotiated_transfer;Negotiated Transfer;;;;;;;;;;;;;x
@@ -406,7 +406,7 @@ uninstall_communist_gov_cb_desc;Uninstall the communist government.;Révoquer le 
 uninstall_communist_gov_cb_setup;Uninstall the communist government.;Révoquer le gouvernement communiste.;Die kommunistische Regierung absetzen.;;;;;;;;;;;x
 uninstall_communist_gov_cb_short;Uninstall communism.;Révoquer le Communisme.;Kommunismus absetzen;;;;;;;;;;;x
 USS_monroe;Miranda Doctrine;Peuple libre;Freies Volk;;;;;;;;;;;;x;;;;;;;;;;;;;;
-USS_monroe_desc;Liberate the Latin people under foreign rule!;Libå»¨er un å³paysåŠ¬ de ses oppresseurs;Befreien Sie ein §YLand§W von seinen Unterdrückern.;;;;;;;;;;;x
+USS_monroe_desc;Liberate the Latin people under foreign rule!;Libérer un §Ypays§W de ses oppresseurs;Befreien Sie ein §YLand§W von seinen Unterdrückern.;;;;;;;;;;;x
 USS_monroe_short;Liberate the colonial holdings in the New World;$THIRD$ prend $STATE$;$THIRD$ erwirbt $STATE$;;;;;;;;;;;;x;;;;;;;;;;;;;;
 USS_monroe_setup;Liberate the colonial holdings in the New World;Prendre $STATE$ ?$RECIPIENT$ pour le rendre ?$THIRD$;Geben Sie $STATE$ an $THIRD$ von $RECIPIENT$ zurück;;;;;;;;;;;;x;;;;;;;;;;;;;;
 war_of_the_americas_usa;Dismantle the USSA;;;;;;;;;;;;;x
