--- a/TGC/localisation/00_ui-misc.csv
+++ b/TGC/localisation/00_ui-misc.csv
@@ -466,11 +466,11 @@ ATTACKUSREBEL_LOG;We have been attacked in $PROV$.;Nous avons été attaqués dans 
 ATTACKUSREBEL_MAP;Under attack!;Nous sommes attaqués!;;;;;;;;;;;;x
 ATTACKUSREBEL_SETUP;When one of our land units is attacked by the Rebels;Quand une de nos unités terrestres subit une attaque des rebelles;;;;;;;;;;;;x
 ATTR_BASE;Base Value;Valeur de base;;;;;;;;;;;;x
-ATTR_HOME_WATERS;0%â€”Home Waters;0%—en eaux territoriales;;;;;;;;;;;;x
+ATTR_HOME_WATERS;0%-Home Waters;0%—en eaux territoriales;;;;;;;;;;;;x
 ATTR_LEADER;Leader Manoeuvre;Manœuvre du chef;;;;;;;;;;;;x
 ATTR_OPEN_SEA;Open Sea;Haute mer;;;;;;;;;;;;x
 ATTR_SAFE_RANGE;A Fleet in range of supply ships, and near a coast will not take any attrition.;Une flotte à portée de navires ravitailleurs et à proximité d'une côte, ne subit aucune attrition.;;;;;;;;;;;;x
-ATTR_SHIP_AT_PORT;0%â€”At Port;0%—Au port;;;;;;;;;;;;x
+ATTR_SHIP_AT_PORT;0%-At Port;0%—Au port;;;;;;;;;;;;x
 ATTR_TIME_AT_SEA;Time at Sea;Temps en mer;;;;;;;;;;;;x
 ATTRITION;Attrition;Attrition;;;;;;;;;;;;x
 ATTRITION_MAX;Maximum of §Y$VALUE$§W percent in this location.;Un maximum de §Y$VALUE$§W pour cent à cet endroit.;;;;;;;;;;;;x
@@ -2494,7 +2494,7 @@ GETTING_NEEDS;Getting $NEED$: §Y$VAL$%§W;Recevant '$NEED$' : §Y$VAL$%§W;Decken $
 GETTING_ONLY_NEEDS;Getting only $NEED$: §Y$VAL$%§W;Recevant à peine '$NEED$' : §Y$VAL$%§W;;;;;;;;;;;;x
 GGCOINS_BAD_LOGIN;Wrong username or password;Nom d'utilisateur ou mot de passe incorrect;;;;;;;;;;;;x
 GGCOINS_ERR_DUPLICATE;You already own this item;Cet élément vous appartient déjà.;;;;;;;;;;;;x
-GGCOINS_ERR_HANDSHAKE;Connection errorâ€”Please check your firewall settings;Erreur de connexion—Veuillez vérifier les paramètres du pare-feu.;;;;;;;;;;;;x
+GGCOINS_ERR_HANDSHAKE;Connection error-Please check your firewall settings;Erreur de connexion—Veuillez vérifier les paramètres du pare-feu.;;;;;;;;;;;;x
 GGCOINS_ERR_INVALID_RESPONSE;Wrong combination of username and password;Mauvaise combinaison de nom d'utilisateur/mot de passe;;;;;;;;;;;;x
 GGCOINS_ERR_NET;Network Error;Erreur de réseau;;;;;;;;;;;;x
 GGCOINS_ERR_NO_MEM;Memory allocation error;Erreur d'allocation de mémoire;;;;;;;;;;;;x
