--- a/TGC/localisation/00_countries-names.csv
+++ b/TGC/localisation/00_countries-names.csv
@@ -196,7 +196,7 @@ CYP;Cyprus;Chypre;Zypern;;;;;;;;;;;x
 CYR;Cyrenaica;;;;;;;;;;;;;x
 CZH;Czechoslovakia;Tchécoslovaquie;Tschechoslowakei;;;;;;;;;;;x
 D01;Kingdom of $REGION$;;Das Königreich von $REGION$;;;;;;;;;;;x
-D02;Confederation of $REGION$;;Die Konfäderation von $REGION$;;;;;;;;;;;x
+D02;Confederation of $REGION$;;Die Konföderation von $REGION$;;;;;;;;;;;x
 D03;Commonwealth of $REGION$;;Commonwealth von $REGION$;;;;;;;;;;;x
 D04;Republic of $REGION$;;Die Republik von $REGION$;;;;;;;;;;;x
 D05;$REGION$ Free State;;Der $REGION$-Staat;;;;;;;;;;;x
@@ -204,7 +204,7 @@ D06;People's Republic of $REGION$;;Die Volksrepublik von $REGION$;;;;;;;;;;;x
 D07;Free State of $REGION$;;Der Freistaat von $REGION$;;;;;;;;;;;x
 D08;Grand State of $REGION$;;Der Großstaat von $REGION$;;;;;;;;;;;x
 D09;State of $REGION$;;Der Staat von $REGION$;;;;;;;;;;;x
-D10;Principality of $REGION$;;Das Förstentum von $REGION$;;;;;;;;;;;x
+D10;Principality of $REGION$;;Das Fürstentum von $REGION$;;;;;;;;;;;x
 DAG;Dagestan;;;;;;;;;;;;;x		
 DA0;Avaristan;;;;;;;;;;;;;x
 DA1;Kaytag;;;;;;;;;;;;;x
@@ -388,7 +388,7 @@ KOK;Kokand;Kokand;Kokand;;;;;;;;;;;x
 KON;Kongo;;;;;;;;;;;;;x
 KOR;Korea;;;;;;;;;;;;;x
 KOT;Kotah;;;;;;;;;;;;;x
-KPB;Portugal-Brazil;Portugal-Brazil;Portugal-Brazil;;;;;;;;;;;x
+KPB;Portugal-Brazil;Portugal-Brazil;Portugal-Brasilien;;;;;;;;;;;x
 KRA;Krakow;Cracovie;Krakau;;;;;;;;;;;x
 KRL;Karelia;;;;;;;;;;;;;x
 KRN;Karnatak;;;;;;;;;;;;;x
@@ -640,7 +640,7 @@ SHO;Shonaland;Shona;Shona;;;;;;;;;;;x
 SHW;Shewa;Shewa;Shewa;;;;;;;;;;;x
 SIA;Siam;Siam;Siam;;;;;;;;;;;x
 SIB;Siberian Republic;;;;;;;;;;;;;x
-SIC;Two Sicilies;Deux-Siciles;Bd Sizilien;;;;;;;;;;;x
+SIC;Two Sicilies;Deux-Siciles;Königreich beider Sizilien;;;;;;;;;;;x
 SID;Sidama;Sidama;Sidama;;;;;;;;;;;x
 SIE;Transylvania;Transylvanie;Siebenbürgen;;;;;;;;;;;x
 SIK;Sikkim;Sikkim;Sikkim;;;;;;;;;;;x
@@ -726,7 +726,7 @@ TRA;Travancore;Travancore;Travancore;;;;;;;;;;;x
 TRE;Trieste;Trieste;Triest;;;;;;;;;;;x
 TRI;Tripoli;Tripoli;Tripolis;;;;;;;;;;;x
 TRN;Transvaal;Transvaal;Transvaal;;;;;;;;;;;x
-TRN_democracy2;Potchefstroom Republic;Potchefstroom Republic;Potchefstroom Republic;;;;;;;;;;;x
+TRN_democracy2;Potchefstroom Republic;Potchefstroom Republic;Potchefstroom Republik;;;;;;;;;;;x
 TRP;Tripura;;;;;;;;;;;;;x
 TRZ;Trarza;;;;;;;;;;;;;x
 TST;Alto Adige;;;;;;;;;;;;;x
