Replaced empty space like character with normal empty space

--- a/TGC/localisation/00_tech-schools.csv
+++ b/TGC/localisation/00_tech-schools.csv
@@ -7,7 +7,7 @@ ts_commerce;Business Schools & Tycoon Capitalism;;;;;;;;;;;;;x
 ts_commerce_desc;Our country has under the past years come increasingly under the sway of select cliques of people who have all been educated at the same, or similar, elite business schools and companies. By supporting these groups, we can ensure that our academia's focus lies where it matters: in the fields of commerce and industry. This, however, comes at the expense of other fields of research.;;;;;;;;;;;;;x
 ts_culture;Avantgarde Intelligentsia;;;;;;;;;;;;;x
 ts_culture_desc;A cultural and ideological avantgarde within our country has, during the past years, been undertaking a long march through our academic institutions. By steadily working their way up the rungs of the academic ladder, these radical new ideologues are now in a position to completely subvert our academic institutions to better suit their ideological agenda. By supporting their cause we increase the speed of our cultural research, to the detriment, however, of other spheres of intellectual progress.;;;;;;;;;;;;;x
-ts_czech;Å koda Works;;;;;;;;;;;;;x
+ts_czech;Škoda Works;;;;;;;;;;;;;x
 ts_czech_desc;;;;;;;;;;;;;;x
 ts_industrial;Corporative Industrialism;;;;;;;;;;;;;x
 ts_industrial_desc;Capital and government in our country have, for some time, been doing their utmost to weave between them an intricate web of personal relations, that has increasingly come to assume the forms of a symbiotic relationship of mutual dependence. By further promoting these connections between the public and private spheres of our society we vastly increase our technological progress in the fields of industry at the expense, however, of research in other fields.;;;;;;;;;;;;;x
