--- a/TGC/localisation/00_countries-names-gov't.csv
+++ b/TGC/localisation/00_countries-names-gov't.csv
@@ -987,7 +987,7 @@ FIN_hms_government;Kingdom of Finland;;;;;;;;;;;;;x
 FIN_proletarian_dictatorship;Red Finland;;;;;;;;;;;;;x
 FIN_prussian_constitutionalism;Kingdom of Finland;;;;;;;;;;;;;x
 FIU_bourgeois_dictatorship;Carnaro;;;;;;;;;;;;;x
-FIU_democracy;Free State of Fiume;ùtat libre de Fiume;Freistaat Fiume;;;;;;;;;;;x
+FIU_democracy;Free State of Fiume;…tat libre de Fiume;Freistaat Fiume;;;;;;;;;;;x
 FIU_fascist_dictatorship;Carnaro;;;;;;;;;;;;;x
 FIU_presidential_dictatorship;Carnaro;;;;;;;;;;;;;x
 FJN_fascist_dictatorship;Min Republic;;;;;;;;;;;;;x
