--- a/TGC/localisation/00_events_1000000.csv
+++ b/TGC/localisation/00_events_1000000.csv
@@ -800,7 +800,7 @@ EVTNAME9318716;Italy Nullifies the Treaty of Venice.;;;;;;;;;;;;;x
 EVTDESC9318716;The Italian ambassador has recently informed us of his governmentís decision to nullify the Treaty of Venice which legitimized Austrian rule over Venice and other Italian speaking lands. This marks an end to Austro-Italian friendship. War is most likely on the horizon.;;;;;;;;;;;;;x
 EVTOPTA9318716;So ungrateful!;;;;;;;;;;;;;x
 EVTNAME9318717;Italy Nullifies the Treaty of Aosta.;;;;;;;;;;;;;x
-EVTDESC9318717;The Italian ambassador has recently informed us of his governmentùs decision to nullify the Treaty of Aosta which legitimized French rule over Savoia and other Italian speaking lands. This marks an end to Franco-Italian friendship. War is most likely on the horizon.;;;;;;;;;;;;;x
+EVTDESC9318717;The Italian ambassador has recently informed us of his governmentís decision to nullify the Treaty of Aosta which legitimized French rule over Savoia and other Italian speaking lands. This marks an end to Franco-Italian friendship. War is most likely on the horizon.;;;;;;;;;;;;;x
 EVTOPTA9318717;So ungrateful!;;;;;;;;;;;;;x
 EVTDESC9452276;The monarchy of Brazil has fled Rio, allowing pro-democracy forces to seize the capital and transform the country into a republic. It would seem are ideals of liberty our spreading throughout the New World.;;;;;;;;;;;;;x
 EVTNAME9452276;Brazilian revolution;;;;;;;;;;;;;x
