--- a/TGC/localisation/00_war-cb.csv
+++ b/TGC/localisation/00_war-cb.csv
@@ -98,6 +98,7 @@ colonial_reconquest_cb_desc;Force the §Yrebellious colony§W back into the fold;;
 colonial_reconquest_cb_setup;Annex $RECIPIENT$, our rebellious colony;;;;;;;;;;;;;x
 colonial_reconquest_cb_short;Annex $RECIPIENT$;;;;;;;;;;;;;x
 conquest;Conquest;Conquête;Annektieren;;;;;;;;;;;x
+conquest_triggered;Conquest;Conquête;Annektieren;;;;;;;;;;;x
 conquest_any;Conquest;;;;;;;;;;;;;x
 conquest_any_desc;Conquer an §Yenemy country§W;;;;;;;;;;;;;x
 conquest_any_setup;Annex $RECIPIENT$;;;;;;;;;;;;;x
@@ -109,6 +110,8 @@ conquest_low_setup;Annex minor nation of $RECIPIENT$;;;;;;;;;;;;;x
 conquest_low_short;Annex $RECIPIENT$;;;;;;;;;;;;;x
 conquest_setup;Annex $RECIPIENT$;Annexer $RECIPIENT$;$RECIPIENT$ annektieren;;;;;;;;;;;x
 conquest_short;Annex $RECIPIENT$;Annexer $RECIPIENT$;$RECIPIENT$ annektieren;;;;;;;;;;;x
+conquest_triggered_setup;Annex $RECIPIENT$;Annexer $RECIPIENT$;$RECIPIENT$ annektieren;;;;;;;;;;;x
+conquest_triggered_short;Annex $RECIPIENT$;Annexer $RECIPIENT$;$RECIPIENT$ annektieren;;;;;;;;;;;x
 cut_down_to_size;Cut down to size;Réduire;Größe reduzieren;;;;;;;;;;;x
 cut_down_to_size_boxer;Put down Boxer Rebellion;Mettre fin à la révolte des Boxers;Schlage den Boxeraufstand nieder;;;;;;;;;;;x
 cut_down_to_size_boxer_desc;Force another §Ycountry§W to disarm and pay reparations to us;Forcrer un autre §Ypays§W à désarmer et à nous payer des réparations;Zwinge ein anderes §YLand§W, abzurüsten und Reparationen an uns zu zahlen;;;;;;;;;;;x
