--- a/TGC/localisation/00_flags-religion.csv
+++ b/TGC/localisation/00_flags-religion.csv
@@ -17,3 +17,4 @@ sikh_country;Sikh Country;;;;;;;;;;;;;x
 sunni_country;Sunni Country;;;;;;;;;;;;;x
 theravada_country;Theravada Country;;;;;;;;;;;;;x
 yazidi_country;Yazidi Country;;;;;;;;;;;;;x
+secularized_muslim_society;Secularized Muslim Society;;;;;;;;;;;;;x
