UX descriptions + couple of bug fixes

--- a/TGC/localisation/00_events_0100000.csv
+++ b/TGC/localisation/00_events_0100000.csv
@@ -411,7 +411,7 @@ EVTOPTB187909;Send in the Marines!;;;;;;;;;;;;;x
 EVTDESC187910;Inspired by the liberal revolutions in Europe, a party of Liberals in Brazil, calling themselves the Praieiros, has begun stirring up tensions in our country. They hope to bring an end to slavery, and also expand Brazilian voting rights, in order to make a more free country.;;;;;;;;;;;;;x
 EVTNAME187910;The Praieiros;;;;;;;;;;;;;x
 EVTOPTA187910;This had best not come to violence.;;;;;;;;;;;;;x
-EVTDESC187913;Escaped slaves have formed a Quilombo in this province, a settlement made up of former slaves in hard-to-reach places. It might be some time before we can root them out.;;;;;;;;;;;;;x
+EVTDESC187913;Escaped slaves have formed a Quilombo in this province, a settlement made up of former slaves in hard-to-reach places. It might be some time before we can root them out.\n\n§RIn order to root them out, we will need to place at least one brigade in the province and leave it there until the Quilombo has been found.§!;;;;;;;;;;;;;x
 EVTNAME187913;Escaped Slaves;;;;;;;;;;;;;x
 EVTOPTA187913;Find them!;;;;;;;;;;;;;x
 EVTOPTB187913;What can we even do?;;;;;;;;;;;;;x
