--- a/TGC/localisation/00_ui-misc.csv
+++ b/TGC/localisation/00_ui-misc.csv
@@ -4480,7 +4480,7 @@ PLR_DISC;Player §Y$NAME$§W left the game.;Le joueur §Y$NAME$§W a quitté la parti
 plurality;Government Stability;Stabilité Gouvernementale;;;;;;;;;;;;x
 PLURALITY_CHANGE;Monthly Change;Changement mensuel;Monatliche Veränderung;;;;;;;;;;;x
 PLURALITY_EFFECT;$DIRECTION$ $VALUE$ Government Stability.\n;$DIRECTION$ $VALUE$ en Stabilité Gouvernementale.\n;;;;;;;;;;;;x
-PLURALITY_EXPLANATION;"Government Stability" represents the level of political cohesion and control within a ruling government, affecting the nation's overall efficiency and potential for unrest or revolt.;"Stabilité gouvernementale" représente le niveau de cohésion politique et de contrôle au sein d'un gouvernement au pouvoir, affectant l'efficacité globale de la nation ainsi que son potentiel d'instabilité ou de révolte;;;;;;;;;;;;x
+PLURALITY_EXPLANATION;"Government Stability" represents the level of political cohesion and control within a ruling government, affecting the nation's overall efficiency and potential for unrest or revolt.\n\n§RThis mechanic replaces Plurality. Each point of Government Stability increases ruling party support and administrative efficiency§!;"Stabilité gouvernementale" représente le niveau de cohésion politique et de contrôle au sein d'un gouvernement au pouvoir, affectant l'efficacité globale de la nation ainsi que son potentiel d'instabilité ou de révolte;;;;;;;;;;;;x
 PLURALITY_TR;Government Stability is at least §Y$VAL$§W.\n;La Stabilité Gouvernementale est d'au moins §Y$VAL$§W.\n;;;;;;;;;;;;x
 po_destroy_forts;Destroy all forts in $STATE$.;;Zerstört alle Forts in $STATE$.;;;;;;;;;;;x
 po_destroy_naval_bases;Destroy naval base in $STATE$.;;Zersört den Marinestützpunkt in $STATE$ .;;;;;;;;;;;x
