--- a/TGC/localisation/00_events-utility.csv
+++ b/TGC/localisation/00_events-utility.csv
@@ -59,7 +59,7 @@ EVTSTART;Back to the Start.;;;;;;;;;;;;;x
 EVTNAME64;Utility Options, 1/3;;;;;;;;;;;;;x
 EVTDESC64;Welcome to TGC's Utility menu!\n\n§BNational Campaigns:§! Plethora of options to do do stuff like increase Research or decrease Infamy by paying high monetary costs.\n\n§BNational Value Changes:§! Access the National Value Change menu.\n\n§BVassal Release Menu:§! Allow you to hand pick and release vassals at will.\n\n§BCore Return Menu§!: Allow you to return cores to other nations at will.;;;;;;;;;;;;;x
 EVTOPTA64;Open National Campaigns menu;;;;;;;;;;;;;x
-EVTOPTB64;National Focus Change menu;;;;;;;;;;;;;x
+EVTOPTB64;National Value Change menu;;;;;;;;;;;;;x
 EVTOPTC64;Open Vassal Release menu;;;;;;;;;;;;;x
 EVTOPTD64;Open Core Return menu;;;;;;;;;;;;;x
 EVTNAME65;Utility Options, 2/3;;;;;;;;;;;;;x
@@ -80,8 +80,8 @@ EVTOPTA67;Open the borders.;;;;;;;;;;;;;x
 EVTOPTB67;Controlled immigration.;;;;;;;;;;;;;x
 EVTOPTC67;Close the borders!;;;;;;;;;;;;;x
 EVTOPTD67;Back to the options;;;;;;;;;;;;;
-EVTNAME68;National Focus Change;;;;;;;;;;;;;x
-EVTDESC68;Pick one of the following National Focus:;;;;;;;;;;;;;x
+EVTNAME68;National Value Change;;;;;;;;;;;;;x
+EVTDESC68;Pick one of the following National Value:;;;;;;;;;;;;;x
 EVTOPTA68;Pick Order;;;;;;;;;;;;;x
 EVTOPTB68;Pick Productivity;;;;;;;;;;;;;x
 EVTOPTC68;Pick Autocracy;;;;;;;;;;;;;x
